Quick fix for theme slider
Bluelagoon description was overflowed by its screenshot

--- a/p/themes/base-theme/template.css
+++ b/p/themes/base-theme/template.css
@@ -741,10 +741,15 @@ br + br + br {
 	padding: 0;
 }
 .properties {
-	bottom: -35px;
+	display: none;
+	bottom: 0;
 	position: absolute;
 	width: 100%;
-	display: none;
+	padding: 5px;
+	background: rgba(255, 255, 255, 0.7);
+	color: #000;
+	border-top: 1px solid #aaa;
+	z-index: 10;
 }
 .properties .page-number {
 	right: 0;
